crates/pardosa-mint-private-tests/tests/id_minting_compile_fail/fiber_id_new.rs
use pardosa::FiberId;
fn _no_external_fiber_id_mint() {
    let _ = FiberId::new(42);
}
fn main() {}
